--- a/Hot Detals.html
+++ b/Hot Detals.html
@@ -18,7 +18,7 @@
     <section class="header">
       <!-- HEADER TOP -->
       <div class="header__top">
-        <div class="containers header__top-containers">
+        <div class=" header__top-container">
           <div class="header__top-left">
             <select class="header__top-select" name="currency" id="currency">
               <option class="header__top-option" value="usd">USD</option>
@@ -59,7 +59,7 @@
 
       <!-- HEADER BOTTOM -->
       <div class="header__buttom">
-        <div class="containers header__buttom-containers">
+        <div class=" header__buttom-container">
           <a href="./home.html" class="header__logo-linc">
             <img
               class="header__logo"
@@ -87,7 +87,7 @@
       <div class="hot-deals path">
         <span class="back"><a href="./home.html">Home</a> </span> > Hot deals
       </div>
-      <div class="containers">
+      <div class="container">
         <div class="info">
           <ul class="block1">
             <li class="head">Hot Deals</li>
@@ -542,7 +542,7 @@
 
     <!-- *** *** FOOTER *** *** -->
     <section class="footer">
-      <div class="footer__containers">
+      <div class="footer__container">
         <!-- FOOTER TOP -->
         <div class="footer__top">
           <div class="footer__top-my">
