--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,7 @@
             </div>
          </main>
          <div class="section__form">
-            <input class="search" type="search" placeholder="Search query...">
+            <input class="search" type="search" placeholder="Search query..." />
             <div class="section__form-box">
                  Search
             </div>
