--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
                 </a>
 
                 <div class="header__navbar">
-                    <a href="./Home.html" class="header__navbar-item active">HOME</a>
+                    <a href="./home.html" class="header__navbar-item active">HOME</a>
                     <a href="#" class="header__navbar-item">BAGS</a>
                     <a href="./Hot Detals.html" class="header__navbar-item">SNEAKERS</a>
                     <a href="#" class="header__navbar-item">BEKT</a>
