--- a/Hot Detals.html
+++ b/Hot Detals.html
@@ -71,9 +71,9 @@
           </a>
 
           <div class="header__navbar">
-            <a href="./home.html" class="header__navbar-item active">HOME</a>
+            <a href="./home.html" class="header__navbar-item">HOME</a>
             <a href="#" class="header__navbar-item">BAGS</a>
-            <a href="#" class="header__navbar-item">SNEAKERS</a>
+            <a href="#" class="header__navbar-item active">SNEAKERS</a>
             <a href="#" class="header__navbar-item">BEKT</a>
             <a href="./contact.html" class="header__navbar-item">CONTACT</a>
             <button class="hamburger"></button>
