--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                 </a>
 
                 <div class="header__navbar">
-                    <a href="./Home.html" class="header__navbar-item">HOME</a>
+                    <a href="./home.html" class="header__navbar-item">HOME</a>
                     <a href="#" class="header__navbar-item">BAGS</a>
                     <a href="./Hot Detals.html" class="header__navbar-item">SNEAKERS</a>
                     <a href="#" class="header__navbar-item">BEKT</a>
@@ -117,7 +117,7 @@
             </div>
          </main>
          <div class="section__form">
-            <input class="search" type="search" placeholder="Search query..." />
+            <input class="search" type="search" placeholder="Search query...">
             <div class="section__form-box">
                  Search
             </div>
