--- a/product-list.html
+++ b/product-list.html
@@ -71,7 +71,7 @@
           </a>
 
           <div class="header__navbar">
-            <a href="./Home.html" class="header__navbar-item active">HOME</a>
+            <a href="./home.html" class="header__navbar-item active">HOME</a>
             <a href="#" class="header__navbar-item">BAGS</a>
             <a href="#" class="header__navbar-item">SNEAKERS</a>
             <a href="#" class="header__navbar-item">BEKT</a>
